# trees-everywhere

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  manage.py  pyproject.toml
trees/: admin.py  apps.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
trees/api/: urls.py  views.py
trees/migrations/: 0001_initial.py  0002_alter_user_accounts.py  0003_alter_account_users.py  0004_remove_plantedtree_age.py  0005_plantedtree_account.py
trees/templates/trees/: account_trees.html  base.html  home.html  login.html  plant_tree.html  planted_tree_detail.html
trees_everywhere_project/: asgi.py  settings.py  urls.py  wsgi.py
